최종라운드 완료 및 북마크

--- a/redThon/static/font_style.css
+++ b/redThon/static/font_style.css
@@ -1,5 +1,5 @@
 @font-face { /* 배달의민족 폰트 적용 */
-    font-family: "BMJUA";
-    src: url("font/BMJUA_ttf.ttf") format("truetype");
+    font-family: "GODO";
+    src: url("font/GodoM.ttf") format("truetype");
     font-weight: normal;
   }
