--- a/redThon/templates/index.html
+++ b/redThon/templates/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>    
     <style>
       * {
-        font-family: "BMJUA";
+        font-family: "GODO";
       }
 
       td, th {
