--- a/redThon/templates/test_image.html
+++ b/redThon/templates/test_image.html
@@ -70,9 +70,7 @@
     <a href="{{ url_for('finalStudy1') }}"><img id="cookie13" src="../static/img/cookie13.png" onClick="move_cookie13()"style="position: absolute; left: 57%; top: 15%;" width=7% height=13%  alt ="cookie13.png"></a>
     
     <a href="{{ url_for('finalStudy2') }}"><img id="cookie14" src="../static/img/cookie14.png" onClick="move_cookie14()" style="position: absolute;  left: 46%; top: 13%;" width=7% height=14%  alt ="cookie14.png"></a>
-    <img id="cookie15" src="../static/img/cookie15.png" onClick="move_cookie15()"
-    style="position: absolute; left: 37%; top: 15%;" 
-    width=7% height=12.5%  alt ="cookie15.png">
+    <a href="{{ url_for('finalStudy3') }}"><img id="cookie15" src="../static/img/cookie15.png" onClick="move_cookie15()" style="position: absolute; left: 37%; top: 15%;" width=7% height=12.5%  alt ="cookie15.png"></a>
 
     <!-- 클리어 된 초코 쿠키  -->
     <img id="cookie1-1" src="../static/img/cookie1-1.png"
