--- a/redThon/templates/cardStudy.html
+++ b/redThon/templates/cardStudy.html
@@ -5,14 +5,14 @@
     <title>{{title}}</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script> 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="../static/swiper.min.css">
     <link rel="stylesheet" href="../static/font_style.css">
     <script src="../static/swiper.min.js"></script>
     <style>
     * {
-        font-family: "BMJUA";
+        font-family: "GODO";
     }
     .swiper-container {
         width: 100%;
@@ -30,21 +30,22 @@
 
     .front2, .back2 {
         z-index:999;
+        padding:20px;
         position: absolute;
         left: 50%; top: 53%;
-        width: 80%; 
+        width: 75%; 
         height: 80%;
         backface-visibility: hidden;
-        display: flex;
-        visibility:hidden;
-        justify-content: center;
+        /* display: flex; */
+        /* visibility:hidden; */
+        /* justify-content: center; */
         align-items: center;
         color: #fff;
         transform: translate(-50%, -50%);
     }
         
     .front2 {
-        background: tomato; 
+        background: white; 
     }
         
     .image_text_front, .image_text_back {
@@ -103,6 +104,35 @@
         background-repeat: repeat;
     } 
 
+    .bookmarkcard {
+        width: 100%; 
+        height: 100%; 
+        position: relative;
+        transition: .4s;
+        transform-style: preserve-3d;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 40%;
+        height: 65%;
+        background-image: url(../static/img/wordCard-1.png);
+        background-size: 100% 100%;
+        background-repeat: repeat;
+    } 
+
+    .card_mini {
+        width: 18%; 
+        height: 35%; 
+        position: relative;
+        transition: .4s;
+        transform-style: preserve-3d;
+        /* transform: translate(-50%, -50%); */
+        background-image: url(../static/img/wordCard-1.png);
+        background-size: 100% 100%;
+        background-repeat: repeat;
+        display: inline-block;
+    }
 
     .front, .back {
         font-weight : bold;
@@ -157,6 +187,12 @@
      
             #"block"
 
+        def function_btn_bookmark(*args):
+            js.alert("북마크!DB에 저장!")
+            pageNum = Element("pageNum")
+            btn_mark = js.document.getElementById("btn_mark"+pageNum.value)
+            btn_mark.src = "../static/img/heart_on.png"
+
         def function_btn_detail(*args):
             #js.alert("상세보기")
             js.event.preventDefault();
@@ -198,22 +234,119 @@
                 hintEle.style.transform = "translate(-50%, -50%) rotateY(180deg)"
             #js.alert(hintEle) 
 
+        def function_bookcard(*args):
+            pageNum = Element("pageNum")
+
+            #js.alert("카드클릭!")
+            #js.alert(pageNum.value);
+
+            hintEle = js.document.getElementById("bookmarkcard"+pageNum.value)
+            hintEle_css = js.window.getComputedStyle(hintEle).transform
+
+            if "matrix3d" in hintEle_css:
+                #js.alert("앞면!")
+                hintEle.style.transform = "translate(-50%, -50%)"
+            elif "matrix" in hintEle_css:
+                #js.alert("뒷면!")    
+                hintEle.style.transform = "translate(-50%, -50%) rotateY(180deg)"
+            #js.alert(hintEle) 
+
+        def function_bookMarkCardD(*args):
+            js.alert("카드 확대!")
+            #카드 확대시, seq(시퀀스)나 문제id값 불러와서 문제&답안 크게 뿌려주기
+            # "1강2번 문제", "1강5번 문제" 이런식으로 DB에 저장되면 문제관리하기 편할 것
+
+            #bookmarkDiv = js.document.getElementById("bookmarkDiv")
+            #bookmarkDiv.style.background = "black"
+
+            #maskHeight = js.document.getElementById("bookmarkDiv").scrollHeight;
+            #maskWidth = js.document.getElementById("bookmarkDiv").scrollWidth;
+
+            shadowEle = js.document.getElementById("shadow")
+            shadowEle.style.visibility = "visible"
     
+        def function_wordBook(*args):
+            js.alert("북마크!")
+            bookmarkEle = js.document.getElementById("bookmarkDiv")
+            bookmarkEle.style.visibility = "visible"
+            
+
+        def function_close_pop(*args):
+            #js.alert("북마크 팝업 닫기")
+            bookmarkcardEle = js.document.getElementsByClassName("card_mini")
+            bookmarkEle = js.document.getElementById("bookmarkDiv")
+            bookmarkEle.style.visibility = "hidden"
+
+        def function_bookMarkBack(*args):
+            shadowEle = js.document.getElementById("shadow")
+            shadowEle.style.visibility = "hidden"
+           
     </py-script>
 
- <!-- 북마크 시작 -->
-   <div class="front2" style="overflow-y:scroll;">
-   	Scroll test<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	2<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	3<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	4<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	5<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	6<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	7<br>11<br>12<br>13<br>
-   </div> 
-<!-- 북마크 끝 ! -->
+    <!-- 북마크 시작 -->
+    <div id="bookmarkDiv" class="front2" style="overflow-y:scroll;visibility: hidden;">
+        <!-- <div id="shadow" class="front2" style="visibility: hidden;background:black;top:50%;width:100%;height:100%;opacity: 0.8;"></div> -->
+        <img id="closePop" pys-onClick ="function_close_pop" src="../static/img/exit_Icon.png" style="position: absolute; right: 1%; top: 3%;" width=8% height=8% alt ="cookie1.png">
+        <br><br><br>
+        <!-- 카드 유형1 -->
+        <div id="bookMarkCard1" class="card_mini" pys-onClick ="function_bookMarkCardD">
+             <div class="front" style="font-size:15px;">[1강 1번 카드]<br>int</div>
+        </div>
 
-   <img id="wordBook" src="../static/img/wordBook.png" style="z-index:11;position: absolute;  right: 25%; top: 5%; height: 100px;transition: .4s;transform-style: preserve-3d;" width=6% height=12%;>
+        <!-- 카드 유형2 : 주관식문제일 경우.. -->
+        <div id="bookMarkCard2" class="card_mini" pys-onClick ="function_bookMarkCardD">
+            <div class="front" style="flex-direction:column; font-size:15px;text-align:left;">
+                <div>
+                    [1강 5번 카드]<br>
+                    다음 코드에서 변수 a의 자료형은 무엇일까요? a=12 a=파이썬
+                    <div>
+                        <input type="radio" id="ra1" name="sel_answer" value="ra1">
+                        <label for="ra1">int(정수형 변수)</label><br>
+                        <input type="radio" id="ra1" name="sel_answer" value="ra1">
+                        <label for="ra1">str(문자열)</label><br>
+                        <input type="radio" id="ra1" name="sel_answer" value="ra1">
+                        <label for="ra1">float(실수형 변수)</label>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="shadow" class="front2" style="overflow-y:scroll;visibility: hidden;background: black;opacity: 0.9;">
+        <!-- (*)북마크-카드확대 시작 -->
+        <!-- ==================== 카드 시작 [1. 일반문제유형] ==================== -->
+        <div id="flip0" class="flip 0" style="z-index:900;"> 
+            <!-- 힌트 > 칠판모양 예정-->
+            <div id="hint0" class="hint 0" style="display:none;">
+                <div class="image_text_back">
+                <img src="../static/img/chap01/1-1.png" style="width:70%;height:70%;"><br>
+                a = 10 으로 코드를 작성하면 a 라는 상자에 10이라는 값이 저장되어요 
+                </div>
+
+                <!-- <img id="cookie1-1" onclick="closeHint()" src="../static/img/cookie1_bak.png" style="position: absolute; right: 0%; top: 0%;" width=10% height=10% alt ="cookie1.png"> -->
+                <img id="closeHint0" pys-onClick ="function_close_hint" src="../static/img/exit_Icon.png" style="position: absolute; right: 0%; top: 0%;" width=10% height=10% alt ="cookie1.png">
+            </div> 
+
+            <div id="bookmarkcard0" class="bookmarkcard 0" pys-onClick ="function_bookcard">
+                <!-- 앞면 -->
+                <div class="front" style="font-size:30px;">변수</div>
+                <!-- 뒷면 -->
+                <div class="back"> 
+                    
+                    <div class="image_text_back">
+                        <img src="../static/img/chap01/1-1.png" style="width:50%;height:50%;"><br> 데이터 값을 저장하는 박스
+                    </div>
+                    <img id="btn_detail0" class="btn_detail" pys-onClick ="function_btn_detail" src="../static/img/detail.png" >
+                </div>
+            </div>
+        </div>
+        <img id="backIcon" src="../static/img/backIcon.png" pys-onClick ="function_bookMarkBack" style="z-index:11;position: absolute;  right: 23%; bottom: 5%; height: 100px;transition: .4s;transform-style: preserve-3d;" width=7% height=12%;>
+		<!-- 확대카드 끝 -->
+    </div> 
+    <!-- 북마크 끝 ! -->
+
+
+   <img id="wordBook" pys-onClick ="function_wordBook" src="../static/img/wordBook.png" style="z-index:11;position: absolute;  right: 25%; top: 5%; height: 100px;transition: .4s;transform-style: preserve-3d;" width=6% height=12%;>
    <a href="{{ url_for('root') }}"><img id="backIcon" src="../static/img/backIcon.png" style="z-index:11;position: absolute;  right: 23%; bottom: 5%; height: 100px;transition: .4s;transform-style: preserve-3d;" width=7% height=12%;></a>
 
     <!-- 카드 순번 hidden값으로 저장 / id구분할때 사용 ex.card0, card1, card2 -->
@@ -241,7 +374,10 @@
 
                     <div id="card{{loop.index - 1}}" class="card {{loop.index - 1}}" pys-onClick ="function_card">
                         <!-- 앞면 -->
-                        <div class="front" style="font-size:30px;">{{row['card_front']|safe}}</div>
+                        <div class="front" style="font-size:30px;">
+                            {{row['card_front']|safe}}
+                        </div>
+                        <img id="btn_mark{{loop.index - 1}}" src="../static/img/heart_off.png" pys-onClick ="function_btn_bookmark"  style="position: absolute; right: 8%; top: 9%;" width=8% height=8% alt ="heart_off.png">
                         <!-- 뒷면 -->
                         <div class="back"> 
                             <div class="image_text_back">
