--- a/redThon/templates/finalStudy2.html
+++ b/redThon/templates/finalStudy2.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <title>{{title}}</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" /> -->
+    <!-- <script defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="../static/swiper.min.css">
+    <!-- <link rel="stylesheet" href="../static/swiper.min.css"> -->
+    <script defer="" src="https://pyscript.net/latest/pyscript.js"></script>
+    <link rel="stylesheet" href="../static/font_style.css">
     <script src="../static/swiper.min.js"></script>
     <style>
+    * {
+        font-family: "GODO";
+    }
+
     .container {
         width: 100%;
         height: 100%; 
@@ -149,12 +156,25 @@
         width:10%; height:10%;transform:none;position:absolute;top:85%;left:95%
     }
 
+    .answer_input{
+        border:1px solid gray;
+        border-radius: 0.5rem;
+        width:40%;
+        padding:8px;
+        margin:3px
+    }
+
     </style>
 </head>
 <body>
     <py-script>
         import js
         from js import document
+
+        #js.alert("안녕 ? ")
+        #btnRun = js.document.getElementById("btnRun")
+        #btnRun.className = 'absolute repl-play-button'
+
 
         def function_close_hint(*args):
             #js.alert("창 닫기")
@@ -248,22 +268,26 @@
                 </div>
                 <div style="background-color: #fff; height:92%;">
                     <!--문제영역-->
-                    <div><img id="final01" src="../static/img/final02/finalRound2-1.png" style="width:100%;height:350px;"></div>
+                    <div style="display:inline-block;width:40%;height:70%;">
+                        <img id="final01" src="../static/img/final02/round2.png" style="width:100%;height:100%">
+                    </div>
+
+                    <div style="text-align:left;width:60%;float:right;font-weight: normal">
+                        <py-repl>
+                            
+                        </py-repl>
+                    </div>
                     
                     <!--답안영역-->
-                    <div style="text-align:left;display: inline-block;width:100%;">
-                        <div style="margin-top:20px;margin-bottom: 20px;">Q.왼쪽 카드 코드의 실행결과는 위와 같을 때, <br>빈칸에 들어가야할 코드의 내용을 입력해보세요!</div>
-                        <div style="width:100%;float:left;width:50%;"> 
-                            <div><input type="text" placeholder="빈칸에 들어갈 코드를 입력해보세요!" style="width:40%;height:10px;margin:3px"></div>
-                            <div><input type="text" placeholder="빈칸에 들어갈 코드를 입력해보세요!" style="width:40%;height:10px;margin:3px"></div>
-                            <div><input type="text" placeholder="빈칸에 들어갈 코드를 입력해보세요!" style="width:40%;height:10px;margin:3px"></div>
-                            <div><input type="text" placeholder="빈칸에 들어갈 코드를 입력해보세요!" style="width:40%;height:10px;margin:3px"></div>
-                        </div>  
-                        <div style="float:right;width:49%;">
-                            <py-repl>
+                    <div style="display: inline-block;text-align:left;width:100%;">
+                        <div style="margin:10px;">Q.왼쪽 카드 코드의 실행결과는 위와 같을 때, 빈칸에 들어가야할 코드의 내용을 입력해보세요!</div>
+                        <div style="margin-left:10px;width:100%;float:left;"> 
 
-                            </py-repl>
-                        </div>
+                            <div><input class="answer_input" type="text" placeholder=" 빈칸에 들어갈 코드를 입력해보세요!" ></div>
+                            <div><input class="answer_input" type="text" placeholder=" 빈칸에 들어갈 코드를 입력해보세요!" ></div>
+                            <div><input class="answer_input" type="text" placeholder=" 빈칸에 들어갈 코드를 입력해보세요!" ></div>
+                            <div><input class="answer_input" type="text" placeholder=" 빈칸에 들어갈 코드를 입력해보세요!" ></div>
+                        </div>  
                     </div>
                 </div>    
             </div>
